# emo-bon-data-validation

./: .gitignore  .pre-commit-config.yaml  Auxiliary-functions.ipynb  Batch1and2_combined_logsheets_2024-09-02.csv  Batch1and2_combined_logsheets_2024-09-03.csv  Batch1and2_combined_logsheets_2024-09-06.csv  EMO-BON-metadata-validation.ipynb  GH-data-validation.ipynb  LICENSE  Observatory_combined_logsheets_validated.csv  README.md  missing_codes_in_sheets.ipynb  pyproject.toml  requirements.txt  validation-strict-semistrict.ipynb
governance/: observatories_validated.csv
logsheets/: AAOT_water_column_measured_validated.csv  AAOT_water_column_sampling_validated.csv  BPNS_soft_sediment_measured_validated.csv  BPNS_soft_sediment_observatory_validated.csv  BPNS_soft_sediment_sampling_validated.csv  BPNS_water_column_measured_validated.csv  BPNS_water_column_observatory_validated.csv  BPNS_water_column_sampling_validated.csv  Bergen_water_column_measured_validated.csv  Bergen_water_column_sampling_validated.csv  EMT21_soft_sediment_measured_validated.csv  EMT21_soft_sediment_sampling_validated.csv  EMT21_water_column_measured_validated.csv  EMT21_water_column_sampling_validated.csv  ESC68N_water_column_measured_validated.csv  ESC68N_water_column_sampling_validated.csv  HCMR-1_water_column_measured_validated.csv  HCMR-1_water_column_sampling_validated.csv  IUIEilat_water_column_measured_validated.csv  IUIEilat_water_column_sampling_validated.csv  LMO_water_column_measured_validated.csv  LMO_water_column_observatory_validated.csv  LMO_water_column_sampling_validated.csv  MBAL4_water_column_measured_validated.csv  MBAL4_water_column_sampling_validated.csv  NRMCB_soft_sediment_measured_validated.csv  NRMCB_soft_sediment_sampling_validated.csv  NRMCB_water_column_measured_validated.csv  NRMCB_water_column_sampling_validated.csv  OOB_soft_sediment_measured_validated.csv  OOB_soft_sediment_observatory_validated.csv  OOB_soft_sediment_sampling_validated.csv  OSD74_water_column_measured_validated.csv  OSD74_water_column_sampling_validated.csv  PiEGetxo_water_column_measured_validated.csv  PiEGetxo_water_column_observatory_validated.csv  PiEGetxo_water_column_sampling_validated.csv  RFormosa_soft_sediment_measured_validated.csv  RFormosa_soft_sediment_observatory_validated.csv  RFormosa_soft_sediment_sampling_validated.csv  (+11 more)
logsheets_github/: BPNS_sediment_sampling_github_validated.csv  BPNS_water_sampling_github_validated.csv  EMT21_sediment_sampling_github_validated.csv  (+12 more)
(+195 files in other folders)
