[tool.poetry]
name = "emo-bon-data-validation"
version = "0.1.0"
description = ""
authors = ["Cymon J. Cox <cymon.cox@googlemail.com>"]
readme = "README.md"
#package_mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pydantic = "^2.9.1"
validators = "^0.34.0"
black = {extras = ["jupyter"], version = "^24.8.0"}
ruff = "^0.6.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"

[tool.ruff.lint]
extend-select = [
    # pyupgrade 
    "UP",
    # pydocstyle
    "E",   
    "W",
    # pyflakes
    "F",
    # flake8
    "S",
    "B",
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
